--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ Stock Empourium
 
 <body>
 <nav>
-<a href="C:\HTML\project\index.html">Homepage</a> 
-<a href="C:\HTML\project\Stock Photos\photo.html">Photos</a> 
-<a href="C:\HTML\project\Stock Music\music.html">Music</a>
-<a href="C:\HTML\project\Stock Videos\video.html">Videos</a>
+<a href="index.html">Homepage</a> 
+<a href="Stock Photos\photo.html">Photos</a> 
+<a href="Stock Music\music.html">Music</a>
+<a href="Stock Videos\video.html">Videos</a>
 </nav>
 <br>
 <br>
