--- a/Stock Videos/video.html
+++ b/Stock Videos/video.html
@@ -6,7 +6,7 @@
 
   <title>Stock Website</title> 
   
-  <link rel="stylesheet" href="C:\HTML\project\project.css">
+  <link rel="stylesheet" href="../project.css">
 
 </head>
 <header>
@@ -17,10 +17,10 @@ Stock Videos
 
 <body>
 <nav>
-<a href="C:\HTML\project\index.html">Homepage</a> 
-<a href="C:\HTML\project\Stock Photos\photo.html">Photos</a> 
-<a href="C:\HTML\project\Stock Music\music.html">Music</a>
-<a href="C:\HTML\project\Stock Videos\video.html">Videos</a>
+<a href="../index.html">Homepage</a> 
+<a href="../\Stock Photos\photo.html">Photos</a> 
+<a href="../\Stock Music\music.html">Music</a>
+<a href="video.html">Videos</a>
 </nav>
 <br>
 <br>
