--- a/Stock Music/music.html
+++ b/Stock Music/music.html
@@ -53,13 +53,13 @@ Results for 2025 Music Survey
 </section>
 <floatright>
 <h2>
-<a href="C:\HTML\project\Stock Music\happy.html">Happy Music</a> 
+<a href="happy.html">Happy Music</a> 
 <br>
 <audio controls>
 <source src="happylazday.mp3" type="audio/mpeg">
 </audio>
 <br>
-<a href="C:\HTML\project\Stock Music\sad.html">Sad Music</a>
+<a href="sad.html">Sad Music</a>
 <br>
 <audio controls>
 <source src="sadgorila.mp3" type="audio/mpeg">
