--- a/Stock Photos/photo.html
+++ b/Stock Photos/photo.html
@@ -53,11 +53,11 @@ Results for 2025 Photo Survey
 </section>
 <floatright>
 <h2>
-<a href="C:\HTML\project\Stock Photos\nature.html">Nature Photos</a> 
+<a href="nature.html">Nature Photos</a> 
 <br>
 <img src="nature_Peacock.png" alt="peacock">
 <br>
-<a href="C:\HTML\project\Stock Photos\vehicle.html">Vehicle Photos</a>
+<a href="vehicle.html">Vehicle Photos</a>
 <br>
 <img src="cars_old.jpg" alt="vintage car">
 </h2>
