--- a/Stock Videos/video.html
+++ b/Stock Videos/video.html
@@ -50,13 +50,13 @@ Results for 2025 Video Survey
 </section>
 <floatright>
 <h2>
-<a href="C:\HTML\project\Stock Videos\nature.html">Nature Videos</a> 
+<a href="nature.html">Nature Videos</a> 
 <br>
 <video controls>
 <source src = duckling.mp4 type = video/mp4>
 </video>
 <br>
-<a href="C:\HTML\project\Stock Videos\architecture.html">Architecture Videos</a>
+<a href="architecture.html">Architecture Videos</a>
 <br>
 <video controls>
 <source src = cathedral.mp4 type = video/mp4>
