--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@ Stock Empourium
 Websites Goal
 </h2>
 <h3>
-Our goal is to provide a website with top quality stock photos,videos, and music to show that not all material needs to be licensed and that free material can be just as good as any other.
+<details>
+  <summary>Goals</summary>
+  <p>Our goal is to provide a website with top quality stock photos,videos, and music to show that not all material needs to be licensed and that free material can be just as good as any other.</p>
+</details>
+
 </h3>
 <h3>
 <form action="https://webdevbasics.net/scripts/demo.php" method="post">
