--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ Stock Empourium
 <a href="Stock Photos\photo.html">Photos</a> 
 <a href="Stock Music\music.html">Music</a>
 <a href="Stock Videos\video.html">Videos</a>
+<a href="products\products.html">products</a> 
 </nav>
 <br>
 <br>
