--- a/products/products.html
+++ b/products/products.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 
 <html>
 
@@ -15,6 +14,13 @@ Stock Empourium
 </header>
 
 <body>
+<nav>
+<a href="index.html">Homepage</a> 
+<a href="Stock Photos\photo.html">Photos</a> 
+<a href="Stock Music\music.html">Music</a>
+<a href="Stock Videos\video.html">Videos</a>
+<a href="products.html">products</a> 
+</nav>
 
 <h1>Products</h1>
 <div id="products">
