--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Stock Website</title> 
   
   <link rel="stylesheet" href="project.css">
+  
+  <meta name="description" content="Homepage for the website featured stock photos customer feedback.">
 
 </head>
 <header>
