--- a/Stock Music/happy.html
+++ b/Stock Music/happy.html
@@ -7,6 +7,8 @@
   <title>Stock Website</title> 
   
   <link rel="stylesheet" href="../project.css">
+  
+    <meta name="description" content="happy stock music gallery">
 
 </head>
 <header>
