--- a/Stock Music/sad.html
+++ b/Stock Music/sad.html
@@ -7,6 +7,9 @@
   <title>Stock Website</title> 
   
   <link rel="stylesheet" href="../project.css">
+  
+    <meta name="description" content="gallery sad music stock media">
+
 
 </head>
 <header>
