--- a/Stock Photos/nature.html
+++ b/Stock Photos/nature.html
@@ -7,6 +7,9 @@
   <title>Stock Website</title> 
   
   <link rel="stylesheet" href="../project.css">
+  
+    <meta name="description" content="nature photos stock photos gallery free to use.">
+
 
 </head>
 <header>
