--- a/Stock Photos/vehicle.html
+++ b/Stock Photos/vehicle.html
@@ -7,6 +7,9 @@
   <title>Stock Website</title> 
   
   <link rel="stylesheet" href="../project.css">
+  
+  
+    <meta name="description" content="vehicle car photos free use stock photos media">
 
 </head>
 <header>
