--- a/Stock Videos/architecture.html
+++ b/Stock Videos/architecture.html
@@ -7,6 +7,9 @@
   <title>Stock Website</title> 
   
   <link rel="stylesheet" href="../project.css">
+  
+    <meta name="description" content="free use architecture videos stock videos free mp4 ogg.">
+
 
 </head>
 <header>
