--- a/Stock Videos/nature.html
+++ b/Stock Videos/nature.html
@@ -7,6 +7,10 @@
   <title>Stock Website</title> 
   
   <link rel="stylesheet" href="../project.css">
+  
+  
+    <meta name="description" content="nature videos stock videos free use.">
+
 
 </head>
 <header>
