--- a/Stock Videos/video.html
+++ b/Stock Videos/video.html
@@ -7,6 +7,10 @@
   <title>Stock Website</title> 
   
   <link rel="stylesheet" href="../project.css">
+  
+  
+    <meta name="description" content="video gallery stock videos">
+
 
 </head>
 <header>
