added JavaScript Popup

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@ Websites Goal
   <p>Our goal is to provide a website with top quality stock photos,videos, and music to show that not all material needs to be licensed and that free material can be just as good as any other.</p>
 </details>
 
+<script>
+alert("Limited time sale on all images ongoing currently!");
+</script>
+
+
 </h3>
 <h3>
 <form action="https://webdevbasics.net/scripts/demo.php" method="post">
