--- a/products/products.html
+++ b/products/products.html
@@ -6,6 +6,9 @@
   <title>Stock Website</title> 
   
   <link rel="stylesheet" href="../project.css">
+  
+    <meta name="description" content="products stock photos stock music stock videos">
+
 </head>
 <header>
 <h1>
@@ -15,10 +18,10 @@ Stock Empourium
 
 <body>
 <nav>
-<a href="index.html">Homepage</a> 
-<a href="Stock Photos\photo.html">Photos</a> 
-<a href="Stock Music\music.html">Music</a>
-<a href="Stock Videos\video.html">Videos</a>
+<a href="../index.html">Homepage</a> 
+<a href="../Stock Photos\photo.html">Photos</a> 
+<a href="../Stock Music\music.html">Music</a>
+<a href="../Stock Videos\video.html">Videos</a>
 <a href="products.html">products</a> 
 </nav>
 
